--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </tr>
                     <tr>
                         <td class="numeroposicao">1</td>
-                        <td class="elemento alcalino naoMetal" id="H">H</td>
+                        <td class="elemento alcalino naoMetal ametal" id="H">H</td>
                         <td colspan="16" id="legenda">
                             <div class="familias" onmouseout="foraMetais()">
                                 <div class="elemento alcalino mouse">Alcalinos</div>
@@ -67,7 +67,7 @@
                                 <div class="elemento gasNobre mouse">Gases Nobres</div>
                             </div>
                         </td>
-                        <td class="elemento gasNobre naoMetal">He</td>
+                        <td class="elemento gasNobre naoMetal ">He</td>
                     </tr>
                     <tr>
                         <td class="numeroposicao">2</td>
@@ -75,8 +75,8 @@
                         <td class="elemento terroso  metal ">Be</td>
                         <td colspan="10" id="legenda">
                             <div class="familias">
-                                <div class="elemento lantanideo mouse">Lantanideo</div> 
-                                <div class="elemento actinideo mouse">Actinideo</div>
+                                <div class="elemento lantanideo mouse"  onmouseout="foraMetais()">Lantanideo</div> 
+                                <div class="elemento actinideo mouse"  onmouseout="foraMetais()">Actinideo</div>
                                 <div class="metal mouse">Metais</div>
                                 <div class="naoMetal mouse">Não Metais</div>
                                 <div class="solido" style="border: 2px solid black;">Sólido</div>
