--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                     </tr>
                     <tr>
                         <td class="numeroposicao">1</td>
-                        <td class="elemento alcalino naoMetal ametal" id="H">H</td>
+                        <td class="elemento alcalino naoMetal ametal">H</td>
                         <td colspan="16" id="legenda">
-                            <div class="familias" onmouseout="foraMetais()">
-                                <div class="elemento alcalino mouse">Alcalinos</div>
-                                <div class="elemento terroso mouse">Terrosos</div>
-                                <div class="elemento metaisTransicao mouse">Transição</div>
-                                <div class="elemento familiaBoro mouse">Fabilia do Boro</div>
-                                <div class="elemento familiaCarbono mouse">Familia do Carbono</div>
+                            <div class="familias" onmouseout="fora()">
+                                <div class="elemento alcalino  mouse">Alcalinos</div>
+                                <div class="elemento terroso  mouse">A.Terrosos</div>
+                                <div class="elemento metaisTransicao  mouse">M.Transição</div>
+                                <div class="elemento familiaBoro mouse">Familia do Boro</div>
+                                <div class="elemento familiaCarbono  mouse">Familia do Carbono</div>
                                 <div class="elemento familiaNitrogenio mouse">Familia do Nitrogenio</div>
                                 <div class="elemento calcogenio mouse">Calcogenios</div>
                                 <div class="elemento halogenio mouse">Halogenios</div>
@@ -75,10 +75,10 @@
                         <td class="elemento terroso  metal ">Be</td>
                         <td colspan="10" id="legenda">
                             <div class="familias">
-                                <div class="elemento lantanideo mouse"  onmouseout="foraMetais()">Lantanideo</div> 
-                                <div class="elemento actinideo mouse"  onmouseout="foraMetais()">Actinideo</div>
-                                <div class="metal mouse">Metais</div>
-                                <div class="naoMetal mouse">Não Metais</div>
+                                <div class="elemento lantanideo mouse"  onmouseout="fora()">Lantanideos</div> 
+                                <div class="elemento actinideo mouse"  onmouseout="fora()">Actinideos</div>
+                                <div class="elemento selectM metal "  onmouseout="fora()">Metais</div>
+                                <div class="elemento selectA naoMetal"  onmouseout="fora()">Não Metais</div>
                                 <div class="solido" style="border: 2px solid black;">Sólido</div>
                                 <div class="liquido" style="border: 2px solid black;">Líquido</div>
                                 <div class="gas" style="border: 2px solid black;">Gás</div>
