--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
                     </tr>
                     <tr>
                         <td class="numeroposicao">1</td>
-                        <td class="elemento alcalino naoMetal ametal">H</td>
+                        <td class="elemento alcalino naoMetal ametal" id="1">H</td>
+                        <div id="1" class="curiosidades">
+                            <button class="fechar">X</button>
+                            <p>H eletronegatividade: alta</p>
+                            <p>massa atomica:10,0</p>
+                        </div>
                         <td colspan="16" id="legenda">
                             <div class="familias" onmouseout="fora()">
                                 <div class="elemento alcalino  mouse">Alcalinos</div>
