--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
 
     </header>
+   
     <main>
         <section id="bunner" style="background-image: url(imgs/backgroundgirlquimic.png);">
             <div id="backdropfilter">
@@ -27,6 +28,8 @@
             </div>
         </section>
         <div id="transition"></div>
+        <div id="invisivel">
+        </div>
         <section id="periodicTable">
             <div id="mesa">
                 <table>
