--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </tr>
                     <tr>
                         <td class="numeroposicao">1</td>
-                        <td class="elemento alcalino naoMetal ametal" id="1">H</td>
+                        <td class="elemento alcalino 200 naoMetal ametal" id="1">H</td>
                         <div id="1" class="curiosidades">
                             <button class="fechar">X</button>
                             <p>H eletronegatividade: alta</p>
