--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body onload="temperatura()">
     <header>
 
     </header>
@@ -89,7 +89,7 @@
                                 <div class="elemento selectA naoMetal"  onmouseout="fora()">Não Metais</div>
                                 <div class="solido" style="border: 2px solid black;">Sólido</div>
                                 <div class="liquido" style="border: 2px solid black;">Líquido</div>
-                                <div class="gas" style="border: 2px solid black;">Gás</div>
+                                <div class="gas" style="border: 2px solid black;">Gasoso</div>
                             </div>
                         </td>
                         <td class="elemento familiaBoro naoMetal ametal">B</td>
