--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div id="proceedButton">
-                    <a href=""><button>prosseguir</button></a>
+                    <a href="#mesa"><button>prosseguir</button></a>
                 </div>
             </div>
         </section>
@@ -384,7 +384,7 @@
                             <div>Ba</div>
                             <div class="massaAtomica">138,33</div>
                         </td>
-                        <td class="elemento lantanideo metal">57-71</td>
+                        <td class="elemento lantanideo - -- metal">57-71</td>
                         <td class="elemento metaisTransicao 2227 4602 metal">
                             <div class="numAtomico">72</div>
                             <div>Hf</div>
@@ -473,7 +473,7 @@
                             <div>Ra</div>
                             <div class="massaAtomica">226</div>
                         </td>
-                        <td class="elemento actinideo metal">89-103</td>
+                        <td class="elemento actinideo - -- metal">89-103</td>
                         <td class="elemento metaisTransicao 2100 5500 metal">
                             <div class="numAtomico">104</div>
                             <div>Rf</div>
