--- a/index.html
+++ b/index.html
@@ -61,11 +61,6 @@
                             <div>H</div>
                             <div class="massaAtomica">1,008</div>
                         </td>
-                        <div id="1" class="curiosidades">
-                            <button class="fechar">X</button>
-                            <p>H eletronegatividade: alta</p>
-                            <p>massa atomica:10,0</p>
-                        </div>
                         <td colspan="16" id="legenda">
                             <div class="familias" onmouseout="fora()">
                                 <div class="elemento alcalino  mouse">Alcalinos</div>
@@ -710,6 +705,21 @@
                         </td>
                     </tr>
                 </table>
+                <div class="popups">
+                    <div class="curiosidades 1">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Hidrogênio - H</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 2,2</li>
+                            <li class="popInfo">configuração eletrônica = 1s1</li>
+                            <li class="popInfo">ponto de fusão = -259,2°C </li>
+                            <li class="popInfo">ponto de ebulição = -252,9°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
