--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <div class="elemento gasNobre mouse">Gases Nobres</div>
                             </div>
                         </td>
-                        <td class="elemento gasNobre -272 -268.93 naoMetal ">
+                        <td class="elemento gasNobre -272 -268.93 naoMetal" id="2">
                             <div class="numAtomico">2</div>
                             <div>He</div>
                             <div class="massaAtomica">4,0026</div>
@@ -82,12 +82,12 @@
                     </tr>
                     <tr>
                         <td class="numeroposicao">2</td>
-                        <td class="elemento alcalino 180.5 1342 metal ">
+                        <td class="elemento alcalino 180.5 1342 metal" id="3">
                             <div class="numAtomico">3</div>
                             <div>li</div>
                             <div class="massaAtomica">6,94</div>
                         </td>
-                        <td class="elemento terroso 1287 2469 metal ">
+                        <td class="elemento terroso 1287 2469 metal " id="4">
                             <div class="numAtomico">4</div>
                             <div>Be</div>
                             <div class="massaAtomica">9,0122</div>
@@ -103,32 +103,32 @@
                                 <div class="gas" style="border: 2px solid black;">Gasoso</div>
                             </div>
                         </td>
-                        <td class="elemento familiaBoro 2180 3387 naoMetal ametal">
+                        <td class="elemento familiaBoro 2180 3387 naoMetal ametal" id="5">
                             <div class="numAtomico">5</div>
                             <div>B</div>
                             <div class="massaAtomica">10,81</div>
                         </td>
-                        <td class="elemento familiaCarbono 3550 4287 naoMetal ametal">
+                        <td class="elemento familiaCarbono 3550 4287 naoMetal ametal" id="6">
                             <div class="numAtomico">6</div>
                             <div>C</div>
                             <div class="massaAtomica">12,011</div>
                         </td>
-                        <td class="elemento familiaNitrogenio -210 -195.8 naoMetal ametal">
+                        <td class="elemento familiaNitrogenio -210 -195.8 naoMetal ametal" id="7">
                             <div class="numAtomico">7</div>
                             <div>N</div>
                             <div class="massaAtomica">14,007</div>
                         </td>
-                        <td class="elemento calcogenio -218 -183 naoMetal ametal">
+                        <td class="elemento calcogenio -218 -183 naoMetal ametal" id="8">
                             <div class="numAtomico">8</div>
                             <div>O</div>
                             <div class="massaAtomica">15,999</div>
                         </td>
-                        <td class="elemento halogenio -219.7 -188.1 naoMetal">
+                        <td class="elemento halogenio -219.7 -188.1 naoMetal" id="9">
                             <div class="numAtomico">9</div>
                             <div>F</div>
                             <div class="massaAtomica">18,998</div>
                         </td>
-                        <td class="elemento gasNobre -248.6 -246.053  naoMetal ">
+                        <td class="elemento gasNobre -248.6 -246.053  naoMetal " id="10">
                             <div class="numAtomico">10</div>
                             <div>Ne</div>
                             <div class="massaAtomica">20,1797</div>
@@ -716,6 +716,123 @@
                             <li class="popInfo">configuração eletrônica = 1s1</li>
                             <li class="popInfo">ponto de fusão = -259,2°C </li>
                             <li class="popInfo">ponto de ebulição = -252,9°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 2">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Hélio - He</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 0</li>
+                            <li class="popInfo">configuração eletrônica = 1s2</li>
+                            <li class="popInfo">ponto de fusão = -272°C </li>
+                            <li class="popInfo">ponto de ebulição = -268,93°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 3">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Lítio - Li</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 0,98</li>
+                            <li class="popInfo">configuração eletrônica = 1s2 2s1</li>
+                            <li class="popInfo">ponto de fusão = -180,5°C </li>
+                            <li class="popInfo">ponto de ebulição = -1342°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = sólido</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 4">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Berílio - Be</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 1,57</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2</li>
+                            <li class="popInfo">ponto de fusão = 1287°C </li>
+                            <li class="popInfo">ponto de ebulição = 2469°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = sólido</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 5">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Boro - B</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 2,04</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2 2p1</li>
+                            <li class="popInfo">ponto de fusão = 2180°C </li>
+                            <li class="popInfo">ponto de ebulição = 3387°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = sólido</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 6">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Carbono - C</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 2,55</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2 2p2</li>
+                            <li class="popInfo">ponto de fusão = 3350°C </li>
+                            <li class="popInfo">ponto de ebulição = 4287°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = sólido</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 7">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Nitrogênio - N</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 3,04</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2 2p3</li>
+                            <li class="popInfo">ponto de fusão = -210°C </li>
+                            <li class="popInfo">ponto de ebulição = -195,8°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 8">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Oxigênio - O</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 3,44</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2 2p4</li>
+                            <li class="popInfo">ponto de fusão = -218°C </li>
+                            <li class="popInfo">ponto de ebulição = -183°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 9">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Flúor - F</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 3,98</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2 2p5</li>
+                            <li class="popInfo">ponto de fusão = -219,7°C </li>
+                            <li class="popInfo">ponto de ebulição = -188,1°C</li>
+                            <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
+                        </ul>
+                    </div>
+                    <div class="curiosidades 10">
+                        <div>
+                            <div class="xbar"><button class="fechar">X</button></div>
+                            <p class="popTitulo">Neônio - Ne</p>
+                        </div>
+                        <ul>
+                            <li class="popInfo">eletronegatividade = 0</li>
+                            <li class="popInfo">configuração eletrônica = [He] 2s2 2p6</li>
+                            <li class="popInfo">ponto de fusão = -248,6°C </li>
+                            <li class="popInfo">ponto de ebulição = -246°C</li>
                             <li class="popInfo">estado físico entre 20°C e 25°C = gasoso</li>
                         </ul>
                     </div>
