--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <section id="periodicTable">
             <div id="mesa">
-                <table>
+                <table class="table">
                     <tr>
                         <td class="numeroposicao"></td>
                         <td class="numeroposicao">1</td>
