--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tabela Interativa SEPE</title>
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
 </head>
 <body onload="inicioTemperatura()">
