feito para cllr

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="transition"></div>
         <div id="invisivel">
         </div>
-        <section id="periodicTable">
+        <section id="periodicTable"  onclick="fora()">
             <div id="mesa">
                 <table class="table">
                     <tr>
@@ -95,7 +95,7 @@
                         </td>
                         <td colspan="10" id="legenda">
                             <div class="familias">
-                                <div class="elemento lantanideo mouse"  onmouseout="fora()">Lantanideos</div> 
+                                <div class="elemento lantanideo mouse"   onmouseout="fora()">Lantanideos</div> 
                                 <div class="elemento actinideo mouse"  onmouseout="fora()">Actinideos</div>
                                 <div class="elemento selectM metal "  onmouseout="fora()">Metais</div>
                                 <div class="elemento selectA naoMetal"  onmouseout="fora()">Não Metais</div>
