--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="transition"></div>
         <div id="invisivel">
         </div>
-        <section id="periodicTable"  onclick="fora()">
+        <section id="periodicTable" >
             <div id="mesa">
                 <table class="table">
                     <tr>
