--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                 <div class="solido" style="border: 2px solid black;">Sólido</div>
                                 <div class="liquido" style="border: 2px solid black;">Líquido</div>
                                 <div class="gas" style="border: 2px solid black;">Gasoso</div>
+                                <div class="desc" style="border: 2px solid black;">Desc.</div>
                             </div>
                         </td>
                         <td class="elemento familiaBoro 2180 3387 naoMetal ametal" id="5">
@@ -480,7 +481,7 @@
                             <div>Db</div>
                             <div class="massaAtomica">268</div>
                         </td>
-                        <td class="elemento metaisTransicao indefinido el metal" id="106">
+                        <td class="elemento metaisTransicao indefinido desconhecido metal" id="106">
                             <div class="numAtomico">106</div>
                             <div>Sg</div>
                             <div class="massaAtomica">269</div>
@@ -510,7 +511,7 @@
                             <div>Rg</div>
                             <div class="massaAtomica">281</div>
                         </td>
-                        <td class="elemento metaisTransicao indefinido el metal" id="112">
+                        <td class="elemento metaisTransicao indefinido 84 metal" id="112">
                             <div class="numAtomico">112</div>
                             <div>Cn</div>
                             <div class="massaAtomica">285</div>
@@ -931,7 +932,7 @@
                     <div class="curiosidades 18">
                         <div>
                             <div class="xbar"><button class="fechar">X</button></div>
-                            <p class="popTitulo">Argôn - Ar</p>
+                            <p class="popTitulo">Argônio - Ar</p>
                         </div>
                         <ul>
                             <li class="popInfo">Eletronegatividade = 0</li>
@@ -1168,7 +1169,7 @@
                             <p class="popTitulo">Criptônio - Kr</p>
                         </div>
                         <ul>
-                            <li class="popInfo">Eletronegatividade = 3</li>
+                            <li class="popInfo">Eletronegatividade = 0</li>
                             <li class="popInfo">Configuração eletrônica = [Ar] 3d10 4s2 4p6</li>
                             <li class="popInfo">Ponto de fusão = -157,36 °C </li>
                             <li class="popInfo">Ponto de ebulição = -153,22°C</li>
@@ -1402,7 +1403,7 @@
                             <p class="popTitulo">Xenônio - Xe</p>
                         </div>
                         <ul>
-                            <li class="popInfo">Eletronegatividade = 2,6</li>
+                            <li class="popInfo">Eletronegatividade = 0</li>
                             <li class="popInfo">Configuração eletrônica = [Kr] 4d10 5s2 5p6 </li>
                             <li class="popInfo">Ponto de fusão =  -111,9°C </li>
                             <li class="popInfo">Ponto de ebulição = -107,1°C</li>
@@ -1818,7 +1819,7 @@
                             <p class="popTitulo">Radônio - Rn</p>
                         </div>
                         <ul>
-                            <li class="popInfo">Eletronegatividade = 2,2 </li>
+                            <li class="popInfo">Eletronegatividade = 0 </li>
                             <li class="popInfo">Configuração eletrônica =  [Xe] 4f14 5d10 6s2 6p6 </li>
                             <li class="popInfo">Ponto de fusão =  -71°C </li>
                             <li class="popInfo">Ponto de ebulição = -61,7°C</li>
@@ -2153,7 +2154,7 @@
                     <div class="curiosidades 112">
                         <div>
                             <div class="xbar"><button class="fechar">X</button></div>
-                            <p class="popTitulo">Copernício - Ds</p>
+                            <p class="popTitulo">Copernício - Cn</p>
                         </div>
                         <ul>
                             <li class="popInfo">Eletronegatividade = Desconhecido </li>
@@ -2234,7 +2235,7 @@
                             <p class="popTitulo">Oganessônio - Og</p>
                         </div>
                         <ul>
-                            <li class="popInfo">Eletronegatividade = Desconhecido </li>
+                            <li class="popInfo">Eletronegatividade = 0</li>
                             <li class="popInfo">Configuração eletrônica = [Rn] 7s2 5f14 6d8 7p6</li>
                             <li class="popInfo">Ponto de fusão = -249,6°C</li>
                             <li class="popInfo">Ponto de ebulição = -242,1°C</li>
