--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                         <td colspan="19" style="height: 30px;" class="vacuo"></td>
                     </tr>
                     <tr>
-                        <td colspan="4" rowspan="2" class="vacuo"><img src="imgs/legenda.jpeg" alt="" id="atomicNumber">
+                        <td colspan="4" rowspan="2" class="vacuo"><img src="imgs/legenda.png" alt="" id="atomicNumber">
                         </td>
                         <td class="elemento lantanideo 921 3464 metal" id="57">
                             <div class="numAtomico">57</div>
