mudanças na legenda feitas

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                                 <div class="elemento actinideo mouse" onmouseout="fora()">Actinideos</div>
                                 <div class="elemento selectM metal " onmouseout="fora()">Metais</div>
                                 <div class="elemento selectA naoMetal" onmouseout="fora()">Não Metais</div>
-                                <div class="solido" style="border: 2px solid black;">Sólido</div>
-                                <div class="liquido" style="border: 2px solid black;">Líquido</div>
-                                <div class="gas" style="border: 2px solid black;">Gasoso</div>
-                                <div class="desc" style="border: 2px solid black;">Desc.</div>
+                                <div class="solido" style="border: 2px solid black;"onmouseout="sair()">Sólido</div>
+                                <div class="liquido" style="border: 2px solid black;"onmouseout="sair()">Líquido</div>
+                                <div class="gas" style="border: 2px solid black;"onmouseout="sair()">Gasoso</div>
+                                <div class="desc" style="border: 2px solid black;"onmouseout="sair()">Desc.</div>
                             </div>
                         </td>
                         <td class="elemento familiaBoro 2180 3387 naoMetal ametal" id="5">
