--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <td class="numeroposicao">2</td>
                         <td class="elemento alcalino 180.5 1342 metal" id="3">
                             <div class="numAtomico">3</div>
-                            <div>li</div>
+                            <div>Li</div>
                             <div class="massaAtomica">6,94</div>
                         </td>
                         <td class="elemento terroso 1287 2469 metal " id="4">
